@@ -4,3 +4,11 @@ sourceCompatibility = 1.7
 sourceSets.main.java.srcDirs = [ "src/" ]
 
 eclipse.project.name = appName + "-tests"
+
+
+test {
+    File runningDir = new File('../assets/')
+    runningDir.mkdirs()
+    workingDir = runningDir
+    jvmArgs += "--add-opens=java.base/java.lang=ALL-UNNAMED"
+}
